NYCCHKBK-4910 - Updated css for spending transaction header tag to fix spacing issue in contract id page.
Former-commit-id: 371f495f08244e4cdbaacae81a06e6efe35c0b8e [formerly 371f495f08244e4cdbaacae81a06e6efe35c0b8e [formerly 371f495f08244e4cdbaacae81a06e6efe35c0b8e [formerly d042dc1ad0bb96e19df4237c0aceed2bc0bd07fd]]]
Former-commit-id: 09ff8a18810e2171f6734a9b684fd3129d4f515a
Former-commit-id: 957b4da07000a6ee6a5ae2437755b3edc29ae42d
Former-commit-id: 2576e339eb35bc8f9d919cb5c519d8a2739d4f3d

--- a/source/webapp/sites/all/themes/checkbook3/css/global.css
+++ b/source/webapp/sites/all/themes/checkbook3/css/global.css
@@ -93,7 +93,7 @@ h3 {
     margin-bottom: 12px;
     text-transform: uppercase;
 }
-#contract_history h3 {
+#contract_history h3, #spending_transactions h3 {
     margin-bottom: 12px !important;
 }
 h4 {
